--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -3,9 +3,9 @@
 <div class="row">
   <div class="col-xs-6">
     <%= bootstrap_form_for @product do |f| %>
-      <%= f.text_field :name, hide_label: true, placeholder: "Product Name" %>
-      <%= f.text_field :country_of_origin, hide_label: true, placeholder: "Country of Origin" %>
-      <%= f.text_field :cost, hide_label: true, placeholder: "Cost" %>
+      <%= f.text_field :name %>
+      <%= f.select :country_of_origin, [["USA"], ["China"], ["Mexico"], ["Italy"], ["Argentina"]], { label: "Country of Origin"}, {class: "selectpicker"} %>
+      <%= f.text_field :cost %>
       <%= f.submit %>
     <% end %>
   </div>
